[workspace]
members = [ "clients/stellar", "common","client", "collector", "executors/retroshade"]

[workspace.dependencies]
tokio = {version="1", features=["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde = {version="1", features=["derive"]}
bitcode = {version="0.6.7", features=["serde"]}
anyhow = "1.0.75"
toml = "0.8.9"
libp2p = "0.55.0"
futures = "0.3.31"
async-trait = "0.1.89"
rand = "0.9.2"
blst = "0.3.15"

#secp256k1 = { version = "0.30.0", features = ["rand"] }
sha2 = "0.10.8"

#zephyr = { package = "zephyr-vm", git = "https://github.com/xycloo/zephyr", ref="f746e55" }
zephyr = { package = "zephyr-vm", path = "../zephyr/rs-zephyr-env" }
ingest = {git ="https://github.com/xycloo/rs-ingest" }

common = {path="./common"}
client = {path="./client"}

[workspace.dependencies.stellar-xdr]
version = "=23.0.0"
features = ["next", "curr", "serde", "base64"]
