[package]
name = "collector"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {workspace=true}
common = {workspace=true}
#secp256k1 = {workspace=true}
anyhow = {workspace=true}
tracing = {workspace=true}
tracing-subscriber = {workspace=true}
bitcode = {workspace=true}
blst = {workspace=true}

[features]
default = ["allow_all_executors"]
allow_all_executors = []
